# fbsplash

./: .gitignore
arch/: PKGBUILD  fbsplash.daemon  splashfunctions.patch
core/: .gitignore  AUTHORS  ChangeLog  Doxyfile  INSTALL  Makefile  Makefile.am  NEWS  README  TODO  cmd.c  common.c  common.h  common.mk  config.h  configure  configure.ac  daemon.c  daemon.h  daemon_cmd.c  dev.c  effects.c  fbcon_decor.c  fbcon_decor.h  fbcon_decor_ctl.c  fbsplash.c  fbsplash.h  fbsplash.h.in  image.c  kernel.c  klibc_compat.h  libfbsplash.c  libfbsplash.pc  libfbsplashrender.c  libfbsplashrender.pc  libfbsplashrender.pc.in  libsplash.c  libsplash.pc  libsplashrender.c  libsplashrender.pc  (+23 more)
core/docs/: Makefile.am  bootsplash_compatibility  daemon  early_bootup  kernel_parameters  libfbsplash  metadata_sample.xml  porting  quickstart  theme_format  thememeta.xsd
core/include/: console_decor.h  fbcondecor.h
core/libs/: Makefile.am
core/libs/jpeg-6b/: jerror.c
core/libs/klibc-0.199/: linux
core/libs/klibc-0.199/utils/: nuke.c
core/libs/klibc-1.0/: klibc.spec
core/libs/klibc-1.0.8/: klibc.spec
core/libs/libpng-1.2.8/: Makefile
core/misc/: Makefile  Makefile.am  avg.sh  benchmark.c  blittest.c  inputtest.c  splashtest.c
core/scripts/: Makefile.am  bootsplash2fbsplash  bootsplash2fbsplash.in  splash-functions.sh  splash-functions.sh.in  splash_geninitramfs  splash_geninitramfs.in  splash_manager  splash_manager.in  splash_resize  splash_resize.in  splashy2fbsplash.py.in
core/src/: Makefile.am  daemon.c  daemon.h  daemon_cmd.c  effects.c  fbcon_decor_ctl.c  fbsplash.h.in  fbsplashctl.c  image.c  kernel.c  libfbsplash.c  libfbsplash.pc.in  libfbsplashrender.c  list.c  mng_render.c  mng_splash.h  parse.c  render.c  render.h  ttf.c  util.c
core/src/test/: Makefile.am  parse.h  test_parser.c
core/test/: test_parser.c
debian/: TODO  changelog  control  fbsplash.splashutils  luxisri.ttf.b64  rules  splash  splash.conf  splashutils-dev.install  splashutils-initramfs.install  splashutils-initramfs.postinst  splashutils.copyright  splashutils.dirs  splashutils.init  splashutils.install  splashutils.postinst  splashutils.postrm  splashutils.preinst  splashutils.prerm  splashutils.splashutilsend.init  usplash_write.splashutils
debian/initramfs-tools/hooks/: splashutils
debian/initramfs-tools/scripts/init-top/: splashutils
debian/lib/init/: splash-functions
gentoo/: ChangeLog  Makefile  TODO  fbcondecor.conf  init-fbcondecor  init-splash  initrd.splash  libsplash.c  splash  splash-functions-bl1.sh  splash-functions.sh  splash.c  splash.conf  splash.h  test.c
gentoo/docs/: initscripts_analysis-and-guide
misc/: Makefile  fbres.c  usleep.c
misc/fbtruetype/: ChangeLog  Makefile  README  console.c  fbtruetype.c  fbtruetype.h  luxisri.c  messages.c  ttf.c  ttf.h
misc/kbd/: Makefile  fgconsole.c  getfd.c
release/: config  roll-core.sh  roll-gentoo.sh  ver-gentoo
themes/: .gitignore  gengallery.py  makeshots.sh  makethumbs.sh  sync.sh  unpack.sh
themes/emergence/: 1024x768.cfg  1280x1024.cfg  1280x854.cfg  1400x1050.cfg  1600x1200.cfg  800x600.cfg
themes/gentoo/: 1024x768.cfg  1280x1024.cfg  1280x854.cfg  1400x1050.cfg  1600x1200.cfg  720x576.cfg  800x600.cfg
